--- a/.air.toml
+++ b/.air.toml
@@ -3,7 +3,7 @@ tmp_dir = "bin"
 
 [build]
   bin = "./bin/main"
-  cmd = "go build -o ./bin/main ."
+  cmd = "make build"
 
   delay = 1000
   exclude_dir = ["bin", "public"]
@@ -13,7 +13,7 @@ tmp_dir = "bin"
   follow_symlink = false
   full_bin = ""
   include_dir = []
-  include_ext = ["go", "tpl", "tmpl", "html"]
+  include_ext = ["go", "tpl", "tmpl", "html", "templ"]
   kill_delay = "0s"
   log = "build-errors.log"
   send_interrupt = false
