--- a/.air.toml
+++ b/.air.toml
@@ -7,13 +7,13 @@ tmp_dir = "bin"
 
   delay = 1000
   exclude_dir = ["bin", "public"]
-  exclude_file = []
-  exclude_regex = []
+  exclude_file = ["public/styles.css"]
+  exclude_regex = ['.*_templ\.go$']
   exclude_unchanged = false
   follow_symlink = false
   full_bin = ""
   include_dir = []
-  include_ext = ["go", "tpl", "tmpl", "html", "templ"]
+  include_ext = ["go", "templ", "css"]
   kill_delay = "0s"
   log = "build-errors.log"
   send_interrupt = false
