--- a/.air.toml
+++ b/.air.toml
@@ -14,6 +14,7 @@ tmp_dir = "bin"
   full_bin = ""
   include_dir = []
   include_ext = ["go", "templ", "css"]
+  include_file = [".env"]
   kill_delay = "0s"
   log = "build-errors.log"
   send_interrupt = false
