--- a/.air.toml
+++ b/.air.toml
@@ -6,14 +6,14 @@ tmp_dir = "bin"
   cmd = "make build"
 
   delay = 1000
-  exclude_dir = ["bin", "public"]
+  exclude_dir = ["bin", "public", "database/generated"]
   exclude_file = ["public/styles.css"]
   exclude_regex = ['.*_templ\.go$']
   exclude_unchanged = false
   follow_symlink = false
   full_bin = ""
   include_dir = []
-  include_ext = ["go", "templ", "css"]
+  include_ext = ["go", "templ", "css", "sql"]
   include_file = [".env"]
   kill_delay = "0s"
   log = "build-errors.log"
