--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -17,8 +17,8 @@ on:
           uses: docker/login-action@v3
           with:
             registry: https://ghcr.io
-            username: &{{ github.actor }}
-            password: &{{ secrets.GITHUB_TOKEN }}
+            username: ${{ github.actor }}
+            password: ${{ secrets.GITHUB_TOKEN }}
         - name: Build and push Docker image
           uses: docker/build-push-action@v6
           with:
