--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -24,5 +24,5 @@ jobs:
           context: .
           push: true
           tags: |
-            ghcr.io/PiquelChips/piquel.fr:latest
-            ghcr.io/PiquelChips/piquel.fr:${{ github.sha }}
+            ghcr.io/piquelchips/piquel.fr:latest
+            ghcr.io/piquelchips/piquel.fr:${{ github.sha }}
