--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -29,3 +29,20 @@ jobs:
           tags: |
             ghcr.io/piquelchips/piquel.fr:latest
             ghcr.io/piquelchips/piquel.fr:${{ github.sha }}
+    
+  deploy:
+    runs-on: ubuntu-latest
+    needs:
+      - build-and-push
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Docker Stack Deploy
+        uses: cssnr/stack-deploy-action@v1
+        with:
+          name: piquel-fr
+          file: docker-stack.yaml
+          host: piquel.fr
+          user: deploy
+          ssh_key: ${{ secrets.DEPLOY_SSH_PRIVATE_KEY }}
