--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -27,8 +27,8 @@ jobs:
           context: .
           push: true
           tags: |
-            ghcr.io/piquelchips/piquel.fr:latest
-            ghcr.io/piquelchips/piquel.fr:${{ github.sha }}
+            ghcr.io/piquelorganization/piquel.fr:latest
+            ghcr.io/piquelorganization/piquel.fr:${{ github.sha }}
     
   deploy:
     runs-on: ubuntu-latest
@@ -40,9 +40,18 @@ jobs:
 
       - name: Create env file
         run: |
-          echo "${{ vars.ENVIRONMENT }}" >> ./envfile
+          echo "DB_HOST=${{ vars.DB_HOST }}" >> ./envfile
+          echo "DB_PORT=${{ vars.DB_PORT }}" >> ./envfile
+          echo "DB_NAME=${{ vars.DB_NAME }}" >> ./envfile
+          echo "DB_USER=${{ secrets.DB_USER }}" >> ./envfile
+          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> ./envfile
+          echo "AUTH_GITHUB_CLIENT_ID=${{ secrets.AUTH_GITHUB_CLIENT_ID }}" >> ./envfile
+          echo "AUTH_GITHUB_CLIENT_SECRET=${{ secrets.AUTH_GITHUB_CLIENT_SECRET }}" >> ./envfile
+          echo "AUTH_GOOGLE_CLIENT_ID=${{ secrets.AUTH_GOOGLE_CLIENT_ID }}" >> ./envfile
+          echo "AUTH_GOOGLE_CLIENT_SECRET=${{ secrets.AUTH_GOOGLE_CLIENT_SECRET }}" >> ./envfile
+          echo "COOKIES_AUTH_SECRET=${{ secrets.COOKIES_AUTH_SECRET }}" >> ./envfile
+          echo "COOKIES_AUTH_AGE_IN_SECONDS=${{ secrets.COOKIES_AUTH_AGE_IN_SECONDS }}" >> ./envfile
           echo "GIT_COMMIT_HASH=${{ github.sha }}" >> ./envfile
-          cat ./envfile
 
       - name: Docker Stack Deploy
         uses: cssnr/stack-deploy-action@v1
