--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -29,6 +29,8 @@ jobs:
           tags: |
             ghcr.io/piquelorganization/piquel.fr:latest
             ghcr.io/piquelorganization/piquel.fr:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
     
   deploy:
     runs-on: ubuntu-latest
