--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -5,9 +5,9 @@ services:
       - "--providers.docker"
       - "--providers.docker.exposedbydefault=false"
       - "--entryPoints.websecure.address=:443"
-      - "--certificatesresolvers.myresolver.acme.tlschallenge=true"
-      - "--certificatesresolvers.myresolver.acme.email=${EMAIL}"
-      - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json"
+      - "--certificatesresolvers.piquel-resolver.acme.tlschallenge=true"
+      - "--certificatesresolvers.piquel-resolver.acme.email=${VPS_USER_EMAIL}"
+      - "--certificatesresolvers.piquel-resolver.acme.storage=/letsencrypt/acme.json"
       - "--entrypoints.web.address=:80"
       - "--entrypoints.web.http.redirections.entrypoint.to=websecure"
       - "--entrypoints.web.http.redirections.entrypoint.scheme=https"
@@ -28,9 +28,9 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.services.piquel-fr.loadbalancer.server.port=8080"
-      - "traefik.http.routers.piquel-fr.rule=Host(`${HOST}`)"
+      - "traefik.http.routers.piquel-fr.rule=Host('${HOST}')"
       - "traefik.http.routers.piquel-fr.entrypoints=websecure"
-      - "traefik.http.routers.piquel-fr.tls.certresolver=myresolver"
+      - "traefik.http.routers.piquel-fr.tls.certresolver=piquel-resolver"
     environment:
       HOST: ${HOST}
       PORT: ${PORT}
