Removed env vars from docker stack traefik config

--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -6,7 +6,7 @@ services:
       - "--providers.docker.exposedbydefault=false"
       - "--entryPoints.websecure.address=:443"
       - "--certificatesresolvers.piquel-resolver.acme.tlschallenge=true"
-      - "--certificatesresolvers.piquel-resolver.acme.email=${VPS_USER_EMAIL}"
+      - "--certificatesresolvers.piquel-resolver.acme.email=jesus@heaven.is" # ${VPS_USER_EMAIL}"
       - "--certificatesresolvers.piquel-resolver.acme.storage=/letsencrypt/acme.json"
       - "--entrypoints.web.address=:80"
       - "--entrypoints.web.http.redirections.entrypoint.to=websecure"
@@ -28,7 +28,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.services.piquel-fr.loadbalancer.server.port=8080"
-      - "traefik.http.routers.piquel-fr.rule=Host('${HOST}')"
+      - "traefik.http.routers.piquel-fr.rule=Host(`piquel.fr`)" # '${HOST}')"
       - "traefik.http.routers.piquel-fr.entrypoints=websecure"
       - "traefik.http.routers.piquel-fr.tls.certresolver=piquel-resolver"
     environment:
