--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -45,6 +45,8 @@ jobs:
 
       - name: Create env file
         run: |
+          echo "HOST=${{ vars.HOST }}" >> ./.env
+          echo "PORT=${{ vars.PORT }}" >> ./.env
           echo "DB_HOST=${{ vars.DB_HOST }}" >> ./.env
           echo "DB_PORT=${{ vars.DB_PORT }}" >> ./.env
           echo "DB_NAME=${{ vars.DB_NAME }}" >> ./.env
