Added piquel-network to stack

--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -26,6 +26,8 @@ services:
     deploy:
       update_config:
         order: start-first
+    networks:
+      - piquel-network
 
 networks:
   piquel-network:
