Used PUBLIC_HOST env var in stack for traefik

--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -4,7 +4,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.services.piquel-fr.loadbalancer.server.port=${PORT}"
-      - "traefik.http.routers.piquel-fr.rule=Host(`piquel.fr`)"
+      - "traefik.http.routers.piquel-fr.rule=Host(`${PUBLIC_HOST}`)"
       - "traefik.http.routers.piquel-fr.entrypoints=websecure"
       - "traefik.http.routers.piquel-fr.tls.certresolver=piquel-resolver"
     environment:
