--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -12,12 +12,7 @@ services:
       HOST: ${HOST}
       PORT: ${PORT}
       SSL: "true"
-      # Database
-      DB_HOST: ${DB_HOST}
-      DB_PORT: ${DB_PORT}
-      DB_NAME: ${DB_NAME}
-      DB_USER: ${DB_USER}
-      DB_PASSWORD: ${DB_PASSWORD}
+      DB_URL: ${DB_URL}
       # Auth
       AUTH_GITHUB_CLIENT_ID: ${AUTH_GITHUB_CLIENT_ID}
       AUTH_GITHUB_CLIENT_SECRET: ${AUTH_GITHUB_CLIENT_SECRET}
