Added yaml to air

--- a/.air.toml
+++ b/.air.toml
@@ -13,7 +13,7 @@ tmp_dir = "bin"
   follow_symlink = false
   full_bin = ""
   include_dir = []
-  include_ext = ["go", "templ", "css", "sql", "mod", "ini"]
+  include_ext = ["go", "templ", "css", "sql", "mod", "yml"]
   include_file = [".env"]
   kill_delay = "0s"
   log = "build-errors.log"
