--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,24 @@
-# Go files
-go.sum
+node_modules
 
-# Compiled binaries
-*.exe
-bin/
+# Output
+.output
+.vercel
+.netlify
+.wrangler
+/.svelte-kit
+/build
 
-# Environment
+# OS
+.DS_Store
+Thumbs.db
+
+# Env
 .env
 .env.*
+!.env.example
+!.env.test
 
-# Templ files
-*_templ.txt
-*_templ.go*
+# Vite
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
 
-# TailwindCSS files
-public/styles.css
-
-# sqlc files
-database/generated
