--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,11 @@
 server {
     location / {
         root /usr/share/nginx/html;
+        try_files $uri $uri/index.html $uri.html /index.html;
+    }
+
+    include mime.types;
+    types {
+        application/javascript js mjs;
     }
 }
