--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -34,7 +34,9 @@ jobs:
             ghcr.io/piquelorganization/piquel.fr:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-    
+          build-args: |
+            API=${{ vars.API }}
+
   deploy:
     runs-on: ubuntu-latest
     needs:
@@ -45,8 +47,6 @@ jobs:
 
       - name: Create env file
         run: |
-          echo "API=${{ vars.API }}" >> ./.env
-
           echo "GIT_COMMIT_HASH=${{ github.sha }}" >> ./.env
       - name: Docker Stack Deploy
         uses: cssnr/stack-deploy-action@v1
