--- a/nginx.conf
+++ b/nginx.conf
@@ -6,6 +6,6 @@ server {
 
     include mime.types;
     types {
-        application/javascript js mjs;
+        application/javascript js;
     }
 }
