--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - "main"
+    paths-ignore:
+      - '.gitignore'
+      - 'README.md'
 
 jobs:
   build-and-push:
