--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,9 @@ name: Build
 on:
   push:
     paths-ignore:
-      - '.github/**'
+      - '.github/ISSUE_TEMPLATE/**'
+      - '.github/pull_request_template.md'
+      - '.github/release.yml'
       - '.gitignore'
       - 'README.md'
       - 'LICENSE'
@@ -12,7 +14,9 @@ on:
       - 'docker-stack.yml'
   pull_request:
     paths-ignore:
-      - '.github/**'
+      - '.github/ISSUE_TEMPLATE/**'
+      - '.github/pull_request_template.md'
+      - '.github/release.yml'
       - '.gitignore'
       - 'README.md'
       - 'LICENSE'
@@ -23,22 +27,16 @@ on:
 jobs:
   lint:
     runs-on: ubuntu-latest
-    name: Build the Website
+    name: Build Container
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - uses: denoland/setup-deno@v2
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
         with:
-          deno-version: vx.x.x
-
-      - name: Install dependencies
-        run: deno install
-
-      - name: Build the service
-        run: deno task build
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: piquel-fr-${{ github.sha }}
-          path: build/
+          context: .
+          push: false
