--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,3 +40,8 @@ jobs:
         with:
           context: .
           push: false
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          build-args: |
+            API=${{ vars.API }}
+            DOCS_API=${{ vars.DOCS_API }}
