--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -24,7 +24,7 @@ body:
       required: false
   - type: checkboxes
     attributes:
-      label: A few questions:
+      label: A few questions
       options:
         - label: Would you be willing/able to fix this bug yourself?
           required: true
