--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -6,7 +6,8 @@ projects: ["PiquelOrganization/1"]
 body:
   - type: markdown
     attributes:
-      values: |
+      label: The feature
+      value: |
         Please properly describe the requested feature.
   - type: textarea
     id: description
@@ -17,6 +18,7 @@ body:
       required: true
   - type: checkboxes
     attributes:
+      label: A few questions
       options:
         - label: Would you be willing/able to implement this feature yourself?
           required: true
