--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,12 +9,7 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		"moduleResolution": "bundler",
-        "plugins": [{
-            "name": "typescript-svelte-plugin",
-            "enabled": true,
-            "assumeIsSvelteProject": false
-        }]
+		"moduleResolution": "bundler"
 	}
 	// Path aliases are handled by https://svelte.dev/docs/kit/configuration#alias
 	// except $lib which is handled by https://svelte.dev/docs/kit/configuration#files
