--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -2,7 +2,7 @@ name: Bug Report
 description: Report a bug.
 title: "[BUG] "
 labels: ["bug"]
-projects: ["PiquelOrganization/1"]
+projects: ["piquel-fr/1"]
 body:
   - type: markdown
     attributes:
