--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,3 +45,4 @@ jobs:
           build-args: |
             API=${{ vars.API }}
             DOCS_API=${{ vars.DOCS_API }}
+            ORIGIN=${{ vars.ORIGIN }}
