--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,3 +41,4 @@ jobs:
           build-args: |
             API=${{ vars.API }}
             DOCS_API=${{ vars.DOCS_API }}
+            ORIGIN=${{ vars.ORIGIN }}
