--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,24 +1,33 @@
 name: Build
 on:
   push:
-    branches:
-      - "main"
     paths-ignore:
       - '.github/ISSUE_TEMPLATE/**'
       - '.github/pull_request_template.md'
       - '.github/release.yml'
       - '.gitignore'
       - 'README.md'
-      - 'LICENSE'
+  pull_request:
+    paths-ignore:
+      - '.github/ISSUE_TEMPLATE/**'
+      - '.github/pull_request_template.md'
+      - '.github/release.yml'
+      - '.gitignore'
+      - 'README.md'
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    name: Build Container and Push to Registry
+    name: Build Container
     permissions:
       contents: read
       packages: write
     steps:
+      - name: Extract branch name
+        shell: bash
+        run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
+        id: extract_branch
+
       - name: Checkout repository
         uses: actions/checkout@v4
 
@@ -33,6 +42,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build and push Docker image
+        if: ${{ steps.extract_branch.outputs.branch }} == main
         uses: docker/build-push-action@v6
         with:
           context: .
