--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,7 @@
 name: Build
+
 on:
   push:
-    branches:
-      - "main"
     paths-ignore:
       - '.github/ISSUE_TEMPLATE/**'
       - '.github/pull_request_template.md'
@@ -10,24 +9,24 @@ on:
       - '.gitignore'
       - 'README.md'
       - 'LICENSE'
+      - 'docker-stack.yml'
+  pull_request:
+    paths-ignore:
+      - '.github/ISSUE_TEMPLATE/**'
+      - '.github/pull_request_template.md'
+      - '.github/release.yml'
+      - '.gitignore'
+      - 'README.md'
+      - 'LICENSE'
+      - 'docker-stack.yml'
 
 jobs:
-  build-and-push:
+  lint:
     runs-on: ubuntu-latest
-    name: Build Container and Push to Registry
-    permissions:
-      contents: read
-      packages: write
+    name: Build Container
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Login to Container registry
-        uses: docker/login-action@v3
-        with:
-          registry: https://ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -36,12 +35,10 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          push: true
-          tags: |
-            ghcr.io/piquel-fr/website:latest
-            ghcr.io/piquel-fr/website:${{ github.sha }}
+          push: false
           cache-from: type=gha
           cache-to: type=gha,mode=max
           build-args: |
             API=${{ vars.API }}
             DOCS_API=${{ vars.DOCS_API }}
+            ORIGIN=${{ vars.ORIGIN }}
