--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@sveltejs/kit": "^2.49.0",
         "@sveltejs/vite-plugin-svelte": "^6.2.1",
         "@tailwindcss/vite": "^4.1.17",
+        "@tailwindcss/typography": "^0.5.19",
         "mdsvex": "^0.12.6",
         "svelte": "^5.43.14",
         "svelte-adapter-deno": "^0.9.1",
