--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
     },
     "devDependencies": {
+        "@lucide/svelte": "^0.562.0",
         "@sveltejs/kit": "^2.49.0",
         "@sveltejs/vite-plugin-svelte": "^6.2.1",
         "@tailwindcss/vite": "^4.1.17",
+        "@tailwindcss/typography": "^0.5.19",
+        "mdsvex": "^0.12.6",
         "svelte": "^5.43.14",
         "svelte-adapter-deno": "^0.9.1",
         "svelte-check": "^4.3.4",
