--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "@tailwindcss/vite": "^4.1.17",
         "@tailwindcss/typography": "^0.5.19",
         "mdsvex": "^0.12.6",
+        "openapi-fetch": "^0.15.0",
+        "openapi-typescript": "^7.10.1",
         "svelte": "^5.43.14",
         "svelte-adapter-deno": "^0.9.1",
         "svelte-check": "^4.3.4",
