--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "preview": "vite preview",
         "prepare": "svelte-kit sync || echo ''",
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+        "sync:specs": "deno scripts/update-spec.ts"
     },
     "devDependencies": {
         "@lucide/svelte": "^0.562.0",
