--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "devDependencies": {
         "@lucide/svelte": "^0.562.0",
+        "@sveltejs/adapter-node": "^5.5.2",
         "@sveltejs/kit": "^2.49.0",
         "@sveltejs/vite-plugin-svelte": "^6.2.1",
         "@tailwindcss/vite": "^4.1.17",
@@ -22,7 +23,6 @@
         "openapi-fetch": "^0.15.0",
         "openapi-typescript": "^7.10.1",
         "svelte": "^5.43.14",
-        "svelte-adapter-deno": "^0.9.1",
         "svelte-check": "^4.3.4",
         "tailwindcss": "^4.1.17",
         "typescript": "^5.9.3",
