--- a/package.json
+++ b/package.json
@@ -9,20 +9,23 @@
         "preview": "vite preview",
         "prepare": "svelte-kit sync || echo ''",
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+        "sync:specs": "deno scripts/update-spec.ts"
     },
     "devDependencies": {
         "@lucide/svelte": "^0.562.0",
-        "@sveltejs/kit": "^2.49.0",
-        "@sveltejs/vite-plugin-svelte": "^6.2.1",
-        "@tailwindcss/vite": "^4.1.17",
+        "@sveltejs/adapter-node": "^5.5.2",
+        "@sveltejs/kit": "^2.50.1",
+        "@sveltejs/vite-plugin-svelte": "^6.2.4",
+        "@tailwindcss/vite": "^4.1.18",
         "@tailwindcss/typography": "^0.5.19",
         "mdsvex": "^0.12.6",
-        "svelte": "^5.43.14",
-        "svelte-adapter-deno": "^0.9.1",
-        "svelte-check": "^4.3.4",
-        "tailwindcss": "^4.1.17",
+        "openapi-fetch": "^0.15.0",
+        "openapi-typescript": "^7.10.1",
+        "svelte": "^5.48.2",
+        "svelte-check": "^4.3.5",
+        "tailwindcss": "^4.1.18",
         "typescript": "^5.9.3",
-        "vite": "^7.2.4"
+        "vite": "^7.3.1"
     }
 }
